--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,1 +1,23 @@
-/* No CSS *//*# sourceMappingURL=layout.css.map */
+#gatsby-focus-wrapper {
+  margin: 0 auto;
+  max-width: 780px;
+}
+
+.post-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (max-width: 992px) {
+  .post-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+/*# sourceMappingURL=layout.css.map */
