--- a/src/css/post.module.css
+++ b/src/css/post.module.css
@@ -1,14 +1,1 @@
-.postWrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100vh;
-}
-/*# sourceMappingURL=post.module.css.map */
+/* No CSS *//*# sourceMappingURL=post.module.css.map */
